Fix page layout on small content size

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .content {
   padding: 2rem 10rem;
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
